--- a/Controller/Controller.csproj
+++ b/Controller/Controller.csproj
@@ -68,6 +68,7 @@
     <Compile Include="DataIntegrityChecker.cs" />
     <Compile Include="DataRetriever.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Properties\XamlFunctionality.cs" />
     <Compile Include="StaticReferences.cs" />
   </ItemGroup>
   <ItemGroup>
