--- a/Gestion AcademicoAdministrativa Abastos/MainWindow.csproj
+++ b/Gestion AcademicoAdministrativa Abastos/MainWindow.csproj
@@ -117,8 +117,8 @@
     <Compile Include="SplashScreen.xaml.cs">
       <DependentUpon>SplashScreen.xaml</DependentUpon>
     </Compile>
-    <Compile Include="XamlBridge.cs" />
-    <Compile Include="XamlFunctionality.cs" />
+    <Compile Include="classes\XamlBridge.cs" />
+    <Compile Include="classes\XamlFunctionality.cs" />
     <Page Include="Buscador.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -143,7 +143,7 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="ControladorWPF.cs" />
+    <Compile Include="classes\ControladorWPF.cs" />
     <Compile Include="LogIn.xaml.cs">
       <DependentUpon>LogIn.xaml</DependentUpon>
     </Compile>
@@ -189,7 +189,7 @@
     </Page>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ProcessFileNameFinderClass.cs" />
+    <Compile Include="classes\ProcessFileNameFinderClass.cs" />
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
     </Compile>
@@ -244,5 +244,6 @@
   <ItemGroup>
     <Resource Include="SplashScreen-12-04-2019.png" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
