Add Cryptography to LogIn information

--- a/Controller/Controller.csproj
+++ b/Controller/Controller.csproj
@@ -66,6 +66,7 @@
     <Compile Include="AlumnoFunctionality.cs" />
     <Compile Include="ComponentGenerator.cs" />
     <Compile Include="Constants.cs" />
+    <Compile Include="Cryptography.cs" />
     <Compile Include="DataGenerator.cs" />
     <Compile Include="DataIntegrityChecker.cs" />
     <Compile Include="DataRetriever.cs" />
