Fixed NameSpace Change

--- a/Gestion AcademicoAdministrativa Abastos/MainWindow.csproj
+++ b/Gestion AcademicoAdministrativa Abastos/MainWindow.csproj
@@ -6,7 +6,7 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{9D30ABD0-41D5-4702-95BF-051837DD4FFF}</ProjectGuid>
     <OutputType>WinExe</OutputType>
-    <RootNamespace>Posibles_Interfaces_de_Usuario</RootNamespace>
+    <RootNamespace>Gestion AcademicoAdministrativa Abastos</RootNamespace>
     <AssemblyName>Gestion AcademicoAdministrativa Abastos</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
