--- a/Controller/Controller.csproj
+++ b/Controller/Controller.csproj
@@ -70,6 +70,7 @@
     <Compile Include="DataGenerator.cs" />
     <Compile Include="DataIntegrityChecker.cs" />
     <Compile Include="DataRetriever.cs" />
+    <Compile Include="ProfesorFunctionality.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="StaticReferences.cs" />
   </ItemGroup>
