Modify Model Folder

--- a/EntityFrameworkModel/EntityFrameworkModel.csproj
+++ b/EntityFrameworkModel/EntityFrameworkModel.csproj
@@ -70,41 +70,41 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AbastosDbContext.cs" />
-    <Compile Include="Model\Administrativo.cs" />
-    <Compile Include="Model\Alumno.cs" />
-    <Compile Include="Model\Asignatura.cs" />
-    <Compile Include="Model\AsistenciaDiaAsignatura.cs" />
-    <Compile Include="Model\AsistenciaSemanaAsignatura.cs" />
-    <Compile Include="Model\Aula.cs" />
-    <Compile Include="Model\Bachiller.cs" />
-    <Compile Include="Model\Baja.cs" />
-    <Compile Include="Model\Certificado.cs" />
-    <Compile Include="Model\CertificadoMatricula.cs" />
-    <Compile Include="Model\CertificadoNotas.cs" />
-    <Compile Include="Model\CertificadoTitulo.cs" />
-    <Compile Include="Model\Ciclo.cs" />
-    <Compile Include="Model\Convocatoria.cs" />
-    <Compile Include="Model\Curso.cs" />
-    <Compile Include="Model\Departamento.cs" />
-    <Compile Include="Model\Eso.cs" />
-    <Compile Include="Model\Especial.cs" />
-    <Compile Include="Model\Evaluacion.cs" />
-    <Compile Include="Model\Horario.cs" />
-    <Compile Include="Model\Impartimiento.cs" />
-    <Compile Include="Model\Mantenimiento.cs" />
-    <Compile Include="Model\Nota.cs" />
-    <Compile Include="Model\Ordenador.cs" />
-    <Compile Include="Model\PermisosUsuario.cs" />
-    <Compile Include="Model\Persona.cs" />
-    <Compile Include="Model\Profesor.cs" />
-    <Compile Include="Model\ProfesorSustituto.cs" />
-    <Compile Include="Model\Proyecto.cs" />
-    <Compile Include="Model\Reclamacion.cs" />
-    <Compile Include="Model\Superior.cs" />
-    <Compile Include="Model\Telefono.cs" />
-    <Compile Include="Model\Titulo.cs" />
-    <Compile Include="Model\Trabajador.cs" />
-    <Compile Include="Model\Usuario.cs" />
+    <Compile Include="EntityFramework\Administrativo.cs" />
+    <Compile Include="EntityFramework\Alumno.cs" />
+    <Compile Include="EntityFramework\Asignatura.cs" />
+    <Compile Include="EntityFramework\AsistenciaDiaAsignatura.cs" />
+    <Compile Include="EntityFramework\AsistenciaSemanaAsignatura.cs" />
+    <Compile Include="EntityFramework\Aula.cs" />
+    <Compile Include="EntityFramework\Bachiller.cs" />
+    <Compile Include="EntityFramework\Baja.cs" />
+    <Compile Include="EntityFramework\Certificado.cs" />
+    <Compile Include="EntityFramework\CertificadoMatricula.cs" />
+    <Compile Include="EntityFramework\CertificadoNotas.cs" />
+    <Compile Include="EntityFramework\CertificadoTitulo.cs" />
+    <Compile Include="EntityFramework\Ciclo.cs" />
+    <Compile Include="EntityFramework\Convocatoria.cs" />
+    <Compile Include="EntityFramework\Curso.cs" />
+    <Compile Include="EntityFramework\Departamento.cs" />
+    <Compile Include="EntityFramework\Eso.cs" />
+    <Compile Include="EntityFramework\Especial.cs" />
+    <Compile Include="EntityFramework\Evaluacion.cs" />
+    <Compile Include="EntityFramework\Horario.cs" />
+    <Compile Include="EntityFramework\Impartimiento.cs" />
+    <Compile Include="EntityFramework\Mantenimiento.cs" />
+    <Compile Include="EntityFramework\Nota.cs" />
+    <Compile Include="EntityFramework\Ordenador.cs" />
+    <Compile Include="EntityFramework\PermisosUsuario.cs" />
+    <Compile Include="EntityFramework\Persona.cs" />
+    <Compile Include="EntityFramework\Profesor.cs" />
+    <Compile Include="EntityFramework\ProfesorSustituto.cs" />
+    <Compile Include="EntityFramework\Proyecto.cs" />
+    <Compile Include="EntityFramework\Reclamacion.cs" />
+    <Compile Include="EntityFramework\Superior.cs" />
+    <Compile Include="EntityFramework\Telefono.cs" />
+    <Compile Include="EntityFramework\Titulo.cs" />
+    <Compile Include="EntityFramework\Trabajador.cs" />
+    <Compile Include="EntityFramework\Usuario.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
