--- a/EntityFrameworkModel/EntityFrameworkModel.csproj
+++ b/EntityFrameworkModel/EntityFrameworkModel.csproj
@@ -70,6 +70,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AbastosDbContext.cs" />
+    <Compile Include="DataStructure\ViewsEnum.cs" />
     <Compile Include="EntityFramework\Administrativo.cs" />
     <Compile Include="EntityFramework\Alumno.cs" />
     <Compile Include="EntityFramework\Asignatura.cs" />
