Add SQLEditor Window For Admins

--- a/Gestion_AcademicoAdministrativa_Abastos/MainWindow.csproj
+++ b/Gestion_AcademicoAdministrativa_Abastos/MainWindow.csproj
@@ -143,6 +143,9 @@
     </Compile>
     <Compile Include="Classes\XamlBridge.cs" />
     <Compile Include="Classes\XamlFunctionality.cs" />
+    <Compile Include="SQLEditor.xaml.cs">
+      <DependentUpon>SQLEditor.xaml</DependentUpon>
+    </Compile>
     <Compile Include="ViewSelector.xaml.cs">
       <DependentUpon>ViewSelector.xaml</DependentUpon>
     </Compile>
@@ -203,6 +206,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="SplashScreen.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="SQLEditor.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
