--- a/Gestion_AcademicoAdministrativa_Abastos/MainWindow.csproj
+++ b/Gestion_AcademicoAdministrativa_Abastos/MainWindow.csproj
@@ -132,6 +132,7 @@
     <Compile Include="CustomElements\Notification.xaml.cs">
       <DependentUpon>Notification.xaml</DependentUpon>
     </Compile>
+    <Compile Include="PreLoadedButtons\AdministradorButtons.cs" />
     <Compile Include="PreLoadedButtons\AdministrativoButtons.cs" />
     <Compile Include="PreLoadedButtons\AlumnoButtons.cs" />
     <Compile Include="PreLoadedButtons\ProfesorButtons.cs" />
