Add LocalDatabase Connection String

--- a/EntityFrameworkModel/App.config
+++ b/EntityFrameworkModel/App.config
@@ -15,6 +15,7 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-    <add name="Abastos" connectionString="data source=FAMILIAPAS;initial catalog=Abastos;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+    <!--add name="Abastos" connectionString="data source=FAMILIAPAS;initial catalog=Abastos;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" /-->
+    <add name="Abastos" connectionString="Data Source=localhost;Initial Catalog=Abastos;Integrated Security=True;Persist Security Info=False;Pooling=False;MultipleActiveResultSets=False;Connect Timeout=60;Encrypt=False;TrustServerCertificate=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
 </configuration>
