--- a/DiagramEF/App.config
+++ b/DiagramEF/App.config
@@ -15,6 +15,7 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-    <add name="AbastosEntities" connectionString="metadata=res://*/Diagram.csdl|res://*/Diagram.ssdl|res://*/Diagram.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=FAMILIAPAS;initial catalog=Abastos;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <!--add name="Abastos" connectionString="data source=FAMILIAPAS;initial catalog=Abastos;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" /-->
+    <add name="Abastos" connectionString="Data Source=localhost;Initial Catalog=Abastos;Integrated Security=True;Persist Security Info=False;Pooling=False;MultipleActiveResultSets=False;Connect Timeout=60;Encrypt=False;TrustServerCertificate=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
 </configuration>
