--- a/Gestion_AcademicoAdministrativa_Abastos/App.config
+++ b/Gestion_AcademicoAdministrativa_Abastos/App.config
@@ -8,7 +8,8 @@
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
   </startup>
   <connectionStrings>
-    <add name="Abastos" connectionString="data source=FAMILIAPAS;initial catalog=Abastos;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+    <!--add name="Abastos" connectionString="data source=FAMILIAPAS;initial catalog=Abastos;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" /-->
+    <add name="Abastos" connectionString="Data Source=localhost;Initial Catalog=Abastos;Integrated Security=True;Persist Security Info=False;Pooling=False;MultipleActiveResultSets=False;Connect Timeout=60;Encrypt=False;TrustServerCertificate=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
