--- a/EntityFrameworkModel/App.config
+++ b/EntityFrameworkModel/App.config
@@ -14,8 +14,5 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
-  <connectionStrings>
-    <!--add name="Abastos" connectionString="data source=FAMILIAPAS;initial catalog=Abastos;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" /-->
-    <add name="Abastos" connectionString="Data Source=localhost;Initial Catalog=Abastos;Integrated Security=True;Persist Security Info=False;Pooling=False;MultipleActiveResultSets=False;Connect Timeout=60;Encrypt=False;TrustServerCertificate=True" providerName="System.Data.SqlClient" />
-  </connectionStrings>
+  <connectionStrings configSource="ConnectionStrings.config" />
 </configuration>
