--- a/Gestion_AcademicoAdministrativa_Abastos/MainWindow.csproj
+++ b/Gestion_AcademicoAdministrativa_Abastos/MainWindow.csproj
@@ -184,6 +184,10 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
+    <Page Include="Constants.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="FormularioPersona.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
