--- a/Controller/Controller.csproj
+++ b/Controller/Controller.csproj
@@ -71,6 +71,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AdministrativoFunctionality.cs" />
     <Compile Include="AlumnoFunctionality.cs" />
     <Compile Include="ComponentGenerator.cs" />
     <Compile Include="Constants.cs" />
