Add PartialCurso Partial Class

--- a/EntityFrameworkModel/Model.csproj
+++ b/EntityFrameworkModel/Model.csproj
@@ -119,6 +119,7 @@
     <Compile Include="EntityFramework\Trabajador.cs" />
     <Compile Include="EntityFramework\Usuario.cs" />
     <Compile Include="PartialAsignatura.cs" />
+    <Compile Include="PartialCurso.cs" />
     <Compile Include="PartialPersona.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
