--- a/EntityFrameworkModel/Model.csproj
+++ b/EntityFrameworkModel/Model.csproj
@@ -78,6 +78,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AbastosDbContext.cs" />
+    <Compile Include="Curso.cs" />
     <Compile Include="DataStructure\DNILeterEnum.cs" />
     <Compile Include="DataStructure\MonthEnum.cs" />
     <Compile Include="DataStructure\ViewsEnum.cs" />
